--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,6 +21,8 @@ article {
     flex: 0.001;    
     max-height: 0rem;
     transition: all 1s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    padding: 0 10% 0 10%;
+    overflow: hidden;
     * {
         transition: all 1s;
     } 
@@ -37,6 +39,7 @@ article {
 .article-opened {
     flex-grow: 5;
     max-height: 100rem;
+    overflow: auto;
 }
 
 #contact {
